# kaspa-fair-lab

./: .gitignore  README.md
.hermes/skills/: tn10-official-wallet-workflow.md
docs/: current-handoff.md  kaspa-foundation-architecture.md  phase-roadmap.md  project-brief.md  terminology.md  toccata-feasibility.md
roulette-demo/: README.md
scripts/: check-env.sh
spikes/tn12-minimal-covenant/: README.md  env-047-gated-plan.md  env-048-key-address-preflight.md  findings.md  run_env_042_observation.sh  run_no_broadcast_checks.sh  tn12-node-runbook.md
spikes/tn12-minimal-covenant/artifacts/: env-032-get-server-info.txt  env-035-get-server-info.txt  env-039-get-sync-status.txt  env-040-get-current-network.txt  env-045-end-server-info.txt  env-045-start-blockdag-info.txt  env-045-start-sync-status.txt
spikes/tn12-minimal-covenant/artifacts/env-046-rpc-readonly-suite/: env-046-get-server-info-synced.txt  env-046-summary.txt
spikes/tn12-minimal-covenant/artifacts/env-049-key-address/: env-049-summary.txt
spikes/tn12-minimal-covenant/artifacts/env-050-faucet-funding/: env-050-summary.txt
spikes/tn12-minimal-covenant/artifacts/env-050a-funding-route-discovery/: env-050a-summary.txt
spikes/tn12-minimal-covenant/artifacts/env-050b-tn12-mining-preflight/: env-050b-summary.txt
spikes/tn12-minimal-covenant/artifacts/env-051-tn10-public-rpc-proof/: env-051-summary.txt
spikes/tn12-minimal-covenant/artifacts/env-052-tn10-wallet-address/: env-052-summary.txt
spikes/tn12-minimal-covenant/artifacts/env-053-tn10-faucet-funding/: env-053-summary.txt
spikes/tn12-minimal-covenant/artifacts/env-054-tn10-readonly-utxo/: balance.txt  env-054-summary.txt  server-info.txt  tx-lookup-attempt.txt  utxos.txt
spikes/tn12-minimal-covenant/artifacts/env-055-tn10-ordinary-spend-preflight/: binary-usage-strings.txt  env-055-summary.txt  help-inspection.txt
spikes/tn12-minimal-covenant/artifacts/env-056-tn10-ordinary-send/: env-056-summary.txt  precheck-and-estimate.txt  send-and-postcheck.txt
spikes/tn12-minimal-covenant/env-049-key-address-helper/: Cargo.toml
spikes/tn12-minimal-covenant/env-049-key-address-helper/src/: main.rs
spikes/tn12-minimal-covenant/fixtures/: simple_covenant.sil  simple_covenant.test.json  simple_covenant_tx_structured.test.json  tn12_demo_transition.sil  tn12_demo_transition.test.json
spikes/tn12-minimal-covenant/rpc-get-current-network/: Cargo.toml
spikes/tn12-minimal-covenant/rpc-get-current-network/src/: main.rs
spikes/tn12-minimal-covenant/rpc-readonly-suite/: Cargo.toml  env-042-get-blockdag-info-after-30min.txt  env-042-get-sync-status-after-30min.txt
spikes/tn12-minimal-covenant/rust-tx-assembly/: Cargo.toml  README.md
spikes/tn12-minimal-covenant/rust-tx-assembly/artifacts/: local-no-broadcast-rpc-roundtrip-summary.txt  local-no-broadcast-rpc-transaction-rpc-serializer.hex  local-no-broadcast-rpc-transaction-summary.txt  local-no-broadcast-submit-transaction-request-rpc-serializer.hex  local-no-broadcast-submit-transaction-request-summary.txt  local-no-broadcast-transaction-summary.txt  local-no-broadcast-transaction.hex
spikes/tn12-minimal-covenant/rust-tx-assembly/src/: main.rs
spikes/tn12-minimal-covenant/tn10-covenant-spike/: Cargo.toml
spikes/tn12-minimal-covenant/tn10-covenant-spike/src/: main.rs
verifier/: README.md
(+58 files in other folders)
