[package]
name = "env-049-key-address-helper"
version = "0.1.0"
edition = "2024"

[dependencies]
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "42b734f16e2e09078175028ab33158a9f75e91cf" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "42b734f16e2e09078175028ab33158a9f75e91cf" }
secp256k1 = { version = "0.29.0", features = ["global-context", "rand-std"] }
