[package]
name = "tn12-rust-tx-assembly"
version = "0.1.0"
edition = "2024"

[dependencies]
borsh = { version = "1.5.1", features = ["derive", "rc"], default-features = false }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "42b734f16e2e09078175028ab33158a9f75e91cf" }
