[package]
name = "tn10-covenant-spike"
version = "0.1.0"
edition = "2024"

[dependencies]
kaspa-addresses = { path = "../../../tools/rusty-kaspa-source/env058-20260625T230041Z/rusty-kaspa-tn10-toc3/crypto/addresses" }
kaspa-consensus-core = { path = "../../../tools/rusty-kaspa-source/env058-20260625T230041Z/rusty-kaspa-tn10-toc3/consensus/core" }
kaspa-hashes = { path = "../../../tools/rusty-kaspa-source/env058-20260625T230041Z/rusty-kaspa-tn10-toc3/crypto/hashes" }
kaspa-rpc-core = { path = "../../../tools/rusty-kaspa-source/env058-20260625T230041Z/rusty-kaspa-tn10-toc3/rpc/core" }
kaspa-txscript = { path = "../../../tools/rusty-kaspa-source/env058-20260625T230041Z/rusty-kaspa-tn10-toc3/crypto/txscript" }
kaspa-txscript-errors = { path = "../../../tools/rusty-kaspa-source/env058-20260625T230041Z/rusty-kaspa-tn10-toc3/crypto/txscript/errors" }
kaspa-wrpc-client = { path = "../../../tools/rusty-kaspa-source/env058-20260625T230041Z/rusty-kaspa-tn10-toc3/rpc/wrpc/client" }
rand = "0.8.5"
secp256k1 = { version = "0.29.0", features = ["global-context", "rand-std", "serde"] }
tokio = { version = "1.42.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
